# Hoo-Ray

./: .gitignore  .gitmodules  CHANGELOG.md  Hoo-Ray.cabal  HooRay.cabal  LICENSE  README.md  benchmark_runs.py  benchmark_servers.py  clean.sh  file.txt  graph_results.ipynb  graph_results.py  kill.sh  kill_all_workers.sh  package.yaml  requirements.txt  stack.yaml  start.sh
DependencyGraph/: LEGACY_graph.hs  graph.hs  mvar_usage_example.hs  queue.hs  run-graph.hs  run_graph.hs
ExtractParensExpr/: ExpressionParser.hs  ExtractParens.hs  extract_parens.hs
MISC/: SerializedFunction.hs  serialize.hs
Presentation/: demo.hs  demo.py  tail-recursion.hs
Server/: compute.hs  example.hs  remote-add.hs
Server/c-test/: .gitignore  Makefile  README.md
Tests/: ArithmeticFunctions.hs  arithmetic.hs  arithmetic_test.hs  arithmetic_test_gen.hs  concurrency_module_benchmark.hs  fetch_graph.py  io.hs  list_test_gen.hs  matmul.hs  matmul_test_gen.hs  par_monad_benchmark.hs  pure.hs  pure1.hs  pure1_expected.txt  pure3.hs  pure3_expected.txt  pure_expected.txt  random_arithmetic_graph_generator.py  test.hs  test_dg  test_dg.hs
Vis/: ex_graph.out  fetch_graph.py  visualize_performance.py
app/: Queue.hs
legacy/: .gitignore  CHANGELOG.md  Hoo-Ray.cabal  README.md
legacy/Server/c-test/: listener.c
legacy/Tests/: list_test_gen.hs  pure.hs  pure1.hs  pure_expected.txt
legacy/Vis/: visualize_performance.py
python-scripts/: fetch_graph.py  requirements.txt
slurm/: submit_workers.sh  worker.sh
src/: ExtractParensExpr.hs  Graph.hs  MatMul.hs  RemoteCall.hs  master.hs  worker.hs
test/: MatMulTestGen.hs  build_graph.hs  fetch_graph.py  matmul_coarse_test.hs  matmul_coarse_test_100_1000_1000_20l.hs  matmul_fine_test.hs  matmul_ms_test.hs  matmul_ss_test.hs  mlp_example.hs  test.hs  transformer_example.hs
test-gen/: MatMulTestGen.hs
udp-test/: sender.c
