cabal-version:      2.4
name:               Hoo-Ray
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yuxi Long
maintainer:         longyuxi@live.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    ExtractParensExpr/ExpressionParser.hs

common deps
  default-language: Haskell2010
  build-depends:
     base >= 4.8 && < 5,
     haskell-src-exts,
     syb,
     mtl

executable dependency-graph
    import: deps
    main-is: DependencyGraph/graph.hs

executable expression-parser
    import: deps
    main-is: ExtractParensExpr/ExtractParens.hs

executable serialize
    import: deps
    main-is: MISC/serialize.hs