cabal-version:      2.4
name:               Hoo-Ray
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license: TBD
author:
maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md
    ExtractParensExpr/ExpressionParser.hs

flag distributed
  default: False

common deps
    default-language: Haskell2010
    build-depends:
        base >= 4.8 && < 5,
        haskell-src-exts,
        syb,
        mtl,
        HUnit,
        template-haskell,
        binary,
        silently,
        random,
        text,
        mersenne-random-pure64
    ghc-options:
        -threaded
    hs-source-dirs: ., MISC, Tests
    other-modules: SerializedFunction


common distributed
    if flag(distributed)
        build-depends:
            distributed-process,
            distributed-process-simplelocalnet,
            distributed-static,
            network
        other-modules: DistribUtils
    else
        buildable: False



executable dependency-graph
    import: deps
    main-is: DependencyGraph/run-graph.hs

executable graph
    import: deps
    main-is: DependencyGraph/graph.hs

executable expression-parser
    import: deps
    main-is: ExtractParensExpr/ExtractParens.hs

executable serialize
    import: deps
    main-is: MISC/serialize.hs

executable distributed-example
    import: deps, distributed
    main-is: Server/example.hs

executable distributed-ping
    import: deps, distributed
    main-is: Server/ping.hs

executable distributed-compute
    import: deps, distributed
    main-is: Server/remote-add.hs

executable tests
    import: deps
    main-is: Tests/test_dg.hs

executable arithmetic_test_gen
    import: deps
    main-is: Tests/arithmetic_test_gen.hs

executable list_test_gen
    import: deps
    main-is: Tests/list_test_gen.hs

executable arithmetic_test
    import: deps
    main-is: Tests/arithmetic_test.hs
    Other-Modules: Arithmetic

executable list_test
    import: deps
    main-is: Tests/list_test.hs
    Other-Modules: Arithmetic

executable matmul
    import: deps
    main-is: Tests/matmul.hs
